Revert "Use patched regenerator to add support for  syntax"
This reverts commit 99788b8dc40537624ff0af1a2f306e562d0bfaf3.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "dependencies": {
     "broccoli-filter": "^0.1.6",
-    "regenerator": "git://github.com/mpd106/regenerator.git#export-default-support"
+    "regenerator": "^0.4.1"
   },
   "devDependencies": {
     "broccoli": "^0.7.2",
